# ECE1724-2025F-Rust-Ball-Ball-U

./: .gitignore  README.md
ballballu/: .env  Cargo.toml
ballballu/client/: Cargo.toml  MACROQUAD_CLIENT_GUIDE.md
ballballu/client/src/: input_manager.rs  main.rs  render_manager.rs  websocket.rs
ballballu/server/: Cargo.toml
ballballu/server/src/: game_loop.rs  game_state.rs  http_server.rs  main.rs  websocket_manager.rs
ballballu/server/static/: README.md  app.js  styles.css  test.html
ballballu/shared/: Cargo.toml
ballballu/shared/src/: lib.rs  mechanics.rs  objects.rs  protocol.rs
documentations/: Proposal.md  plan.md  setup.md
